crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_fail_snapshot_tests@undefined_symbol_in_function_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/undefined_symbol_in_function_fail.tapir
---
Error: Unknown variable 'y'
   ╭─[undefined_symbol_in_function_fail.tapir:1:1]
   │
 2 │     return y;
   │            ┬  
   │            ╰── Unknown variable
───╯
